completed dashboard UI

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,3 +1,47 @@
-.test{
-    color: red;
+.sidebar {
+  margin: 60px 72px 0 72px;
+}
+
+.profileWrapper {
+  margin-bottom: 36px;
+}
+
+.username {
+  color: #fff;
+  font-size: 26px;
+  font-weight: 500;
+}
+.email {
+  color: #ffffffb2;
+}
+.figure {
+  position: relative;
+  display: inline-block;
+}
+.avatar{
+  width: 72px;
+  border-radius: 16px;
+}
+.rating {
+  position: absolute;
+  top: -12px;
+  right: -8px;
+}
+.btnWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.btn {
+  color: #ffffffb2;
+  border: none;
+  background-color: transparent;
+  font-size: 1.4rem;
+  line-height: 35px;
+  margin-bottom: 14px;
+  cursor: no-drop;
+}
+.btnActive{
+    color: #fff;
+    cursor: pointer;
 }
