--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -1,3 +1,6 @@
-.test{
-    color: green;
+.container{
+    background-color: #101010;
+    height: 100vh;
+    display: flex;
+    overflow: auto;
 }
