--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,8 +1,8 @@
 .container{
     background-color: #FFFFFF;
     width: 100%;
-    margin: 14px;
-    border-radius: 20px;
+    margin: 16px;
+    border-radius: 16px;
     overflow: hidden;
 }
 .content{
@@ -11,13 +11,12 @@
 }
 .sectionFirst{
   width: 70%;
-  padding: 40px 60px;
+  padding: 40px 40px 0 40px;
 }
 .titleWrapper{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 4px;
 }
 .title{
   color: #262A41;
@@ -40,14 +39,14 @@
 }
 
 .chartContainer{
-  margin: 16px 0;
+  margin: 4px 0;
 }
 
 .itemTitleWrapper{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
 .itemDate{
@@ -62,7 +61,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 16px 0 24px 0;
+  margin: 8px 0 16px 0;
 }
 .itemCategory{
   display: flex;
@@ -80,7 +79,7 @@
 .time{
   color: #404852;
   font-size: 14px;
-  letter-spacing: 0.5px;
+  margin-top: 2px;
 }
 
 .price{
@@ -93,7 +92,6 @@
 
 .sectionSecond{
   background-color: #F9FAFC;
-  height: 100vh;
   width: 30%;
   display: flex;
   flex-direction: column;
@@ -118,9 +116,10 @@
   background-color: #EDF0F6;
   width: 100%;
   margin: 0 auto;
-  margin-top: 8px;
+  margin-top: 16px;
   border-radius: 16px;
   display: flex;
+  padding-bottom: 16px;
 }
 .illustration{
   position: absolute;
@@ -159,4 +158,18 @@
   margin-top: 6px;
   cursor: no-drop;
 }
+
+@media(max-width: 1180px) {
+
+  .sectionFirst{
+    width: 60%;
+  }
+
+  .sectionSecond{
+    width: 100%;
+
+  }
+
+}
+
 
