--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -32,16 +32,17 @@
   flex-direction: column;
   align-items: flex-start;
 }
-.btn {
+.btn, .btnLogout {
   color: #ffffffb2;
   border: none;
   background-color: transparent;
   font-size: 1.4rem;
   line-height: 35px;
   margin-bottom: 14px;
-  cursor: no-drop;
+}
+.btnLogout{
+  cursor: pointer;
 }
 .btnActive{
     color: #fff;
-    cursor: pointer;
 }
