--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -1,6 +1,6 @@
 .container{
     background-color: #101010;
-    height: 100vh;
     display: flex;
-    overflow: auto;
+    overflow: hidden;
+    height: 100vh;
 }
